terraform/module/ec2/ec2.tf
resource "aws_instance" "ec2_instance" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = var.subnet_id
  vpc_security_group_ids = [aws_security_group.this.id]
  key_name               = var.key_name
  user_data              = var.user_data

  tags = {
    Name = var.instance_name
  }
}
